--- a/VICK.html
+++ b/VICK.html
@@ -8,14 +8,21 @@
     <title>Site Vick</title>
 </head>
 
-<body>
+<body background="fundoarco.jpeg" width="1000">
 
 
-    <div align="center">
-        <h1>oiiii</h1>
-    </div>
-    <br>
-    <br>
+    <CENTER>
+
+        <h1>
+            <i><b>Nos meus olhos esta a janela da minha alma </b></i>
+        </h1>
+
+        <h2>
+            <i>Quando fecho meu olhos apenas vejo nada e assim escondo a dolorosa tristesa que vejo em minha frente</i>
+        </h2>
+
+    </CENTER>
+
     <br>
 
     <div align="center">
