--- a/VICK.html
+++ b/VICK.html
@@ -8,7 +8,7 @@
     <title>Site Vick</title>
 </head>
 
-<body background="fundoarco.jpeg" width="1000">
+<body background="img/fundoarco.jpeg" width="1000">
 
 
     <CENTER>
@@ -17,9 +17,50 @@
             <i><b>Nos meus olhos esta a janela da minha alma </b></i>
         </h1>
 
-        <h2>
-            <i>Quando fecho meu olhos apenas vejo nada e assim escondo a dolorosa tristesa que vejo em minha frente</i>
+     <i><b><h2>
+            <i>Quando fecho meu olhos apenas vejo nada e assim escondo a dolorosa tristesa que vejo em minha frente,</i>
+           </h2>
+        <h2> 
+            escuto o som doce de sua voz, acredito que algo brilhante esta ao meu redor.
+
         </h2>
+        <h2>
+            abro meus olhos, e tento procurar a voz e nao vejo, ainda escuto o susurro da brisa ao vento.
+        </h2>
+        <h2>
+            mas vem a escuridao em minha frente novamente sem piedade vem com um vento horripilante volto a fechar meus olhos,
+        </h2>
+        <h2>
+            e essa escuridao muda o ceu: com um tom cinza, sensaçao gelada e pingos de gotas como agulhas.
+        </h2>
+        <h2>
+            tento fugir mas e tao vasto o compo onde estou, e nenhum lugar para me abrigar.
+        </h2>
+        <h2>
+            entao acabo acustumar com esse clima desagradavel a encomodar nao posso controlar.
+        </h2>
+        <h2>
+            olho pro ceu novamente e as gotas nao sao apenas da chuva e sim dos meus olhos tambem.</h2>
+        <h2>
+            derrepende um fecho de luz em meus olhos brilha chega a assustar.
+        </h2>
+        <h2>
+            como pode ser assim tao derrepende inesperado abro meus olhos e vejo com surpresa o que vejo em minha frente
+        </h2>
+        <h2>
+            aquele clima pestuoso triste foi a de passar e agora um clima de sol com um brilho sem esplicar
+        </h2>
+        <h2>
+            um lindo arco-iris a se formar de ante meus olhos de novo a brilhar
+        </h2>
+        <h2>
+            como a vida e a mae natureza tem de curar como es tao ciclica muda de repende e faz passar 
+        </h2>
+        <h2> 
+            e meus sentimentos a melhorar e tambem sao ciclicos uma hora o arco iris ira sugir e meus olhos irao colorir
+        </h2>
+    </i></b>
+
 
     </CENTER>
 
@@ -27,10 +68,8 @@
 
     <div align="center">
 
-        <img src="Pexels-Banco-de-Imagens-gratis-Des1gnON.jpg" alt="" width="1000">
+        <img src="img/Pexels-Banco-de-Imagens-gratis-Des1gnON.jpg" alt="" width="1000">
     </div>
-
-
 
 
 </body>
