--- a/VICK.html
+++ b/VICK.html
@@ -34,7 +34,7 @@
             e essa escuridao muda o ceu: com um tom cinza, sensaçao gelada e pingos de gotas como agulhas.
         </h2>
         <h2>
-            tento fugir mas e tao vasto o compo onde estou, e nenhum lugar para me abrigar.
+            tento fugir mas e tao vasto o campo onde estou, e nenhum lugar para me abrigar.
         </h2>
         <h2>
             entao acabo acustumar com esse clima desagradavel a encomodar nao posso controlar.
