--- a/VICK.html
+++ b/VICK.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,38 +16,78 @@
 
 
 
-    <title>TECNOTODES</title>
+    <title>TECNOTODES🌈</title>
 </head>
 
 
 
 <body>
+    <header>
+        <nav class="menu">
+            <div>
+                <ul>
 
-    <nav class="menu" >
-     <div>
-        <ul> 
+                    <li><a href="VICK.html"> TECNOTODES </a></li>
 
-
-            <li><a href="#">  Sobre nos   </a></li>
-
-
-            <li><a href="#">  Valores   </a></li>  
+                    <li><a href="sobrenos.html"> Sobre Nós </a></li>
 
 
-            <li><a href="#">  visão   </a></li>
+                    <li><a href="valores.html"> Valores </a></li>
 
 
-            <li><a href="#">  resultados   </a></li>
+                    <li><a href="visão.html"> Visão </a></li>
 
 
-        </ul>
-     </div>
+                    <li><a href="fim.html"> Resultados </a></li>
 
 
-    </nav>
-    
+                </ul>
+            </div>
 
-    
+
+        </nav>
+
+
+        <h1>TECNOTODES🌈</h1>🌈
+    </header>
+
+    <section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -62,4 +103,5 @@
 
 
 </body>
+
 </html>
