--- a/sobrenos.html
+++ b/sobrenos.html
@@ -10,9 +10,40 @@
 
 
 
-    <title>Sobre Nos</title>
+    <title>Sobre Nos🌈</title>
 </head>
 <body>
-    
+
+    <nav class="menu">
+        <div>
+            <ul>
+
+                <li><a href="VICK.html"> TECNOTODES </a></li>
+
+                <li><a href="sobrenos.html"> Sobre nos </a></li>
+
+
+                <li><a href="valores.html"> Valores </a></li>
+
+
+                <li><a href="visão.html"> visão </a></li>
+
+
+                <li><a href="fim.html"> resultados </a></li>
+
+
+            </ul>
+        </div>
+
+
+    </nav>
+
+
+
+
+
+
+
+    <h1>O que é TECNOTODES🌈</h1>🌈
 </body>
 </html>
