--- a/fim.html
+++ b/fim.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +11,46 @@
 
 
 
-    <title>Resultante</title>
+    <title>Resultante🌈</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <nav class="menu">
+            <div>
+                <ul>
+
+                    <li><a href="VICK.html"> TECNOTODES </a></li>
+
+                    <li><a href="sobrenos.html"> Sobre nos </a></li>
+
+
+                    <li><a href="valores.html"> Valores </a></li>
+
+
+                    <li><a href="visão.html"> visão </a></li>
+
+
+                    <li><a href="fim.html"> resultados </a></li>
+
+
+                </ul>
+            </div>
+
+
+        </nav>
+
+        <h1>
+            <P>DESEJO TECNOTODES🌈</P>
+        </h1>
+
+    </header>
+
+
+
+
+   
 </body>
+
 </html>
