--- a/visão.html
+++ b/visão.html
@@ -39,7 +39,7 @@
 
         </nav>
 
-        <h1>Aos olhos de TECNOTODES🌈</h1>
+        <title>Aos olhos de TECNOTODES🌈</title>
     </header>
 
 
@@ -47,7 +47,7 @@
         <article>
 
 
-            <H3>
+            <H2>
 
                 <p>
                     Abordando um assunto delicado mas muito importante a ser comentado.
@@ -63,11 +63,11 @@
                     pensamentos e a realidade para um desejo de igualdade.
                 </p>
 
-                <H3>
+            <H2>
 
         </article>
 
-        <H2>A Desigualdade Social.</H2>
+        <H1>A DESIGUALDADE SOCIAL</H1>
 
         <P>Chamada também de desigualdade econômica, é um problema social presente em todos os países do mundo</p>
 
@@ -113,7 +113,7 @@
         </UL>
         </P>
 
-        <H2>VISÃO PRINCIPAL</H2>
+        <H1>VISÃO PRINCIPAL</H1>
         <ARTICLe>
             <H2>
                 Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e fechar
@@ -148,9 +148,9 @@
 
         <H1>OLHAR DE ESPERANÇA</H1>
 
-        <H2>O OBJETIVO ODS ONU</H2>
+        <H3>O OBJETIVO ODS ONU</H3>
 
-        <H3>10-Redução das Desigualdades</H3>
+        <H4>10-Redução das Desigualdades</H4>
 
         <P>
             Reduzir a desigualdade dentro dos países e entre eles
@@ -182,7 +182,7 @@
 
         <a href="https://www.ipea.gov.br/ods/ods10.html" target="_blank">10. Redução das Desigualdades</a>
 
-        <h3>5. Igualdade de Gênero</h3>
+        <h4>5. Igualdade de Gênero</h4>
 
         <p>
             Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas
@@ -222,7 +222,7 @@
         </p><a href="https://www.ipea.gov.br/ods/ods5.html" target="_blank">5. Igualdade de Gênero</a>
 
 
-<h4>Continue em Resoluçao...</h4>🌈
+        <h2>Continue em Resoluçao...</h2>🌈
 
 
 
