--- a/VICK.html
+++ b/VICK.html
@@ -6,33 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="brilho.css">
-
-
-
-
-
-
-
-
-
-
     <title>TECNOTODES🌈</title>
 </head>
 
 
 
-<body>
+<body class="vickbody">
     <header>
         <nav class="menu">
-            <div>
+            <div class="div">
                 <ul>
 
                     <li><a href="VICK.html"> TECNOTODES </a></li>
 
+
                     <li><a href="sobrenos.html"> Sobre Nós </a></li>
-
-
-                    <li><a href="valores.html"> Valores </a></li>
 
 
                     <li><a href="visão.html"> Visão </a></li>
@@ -54,10 +42,10 @@
     <section>
 
 
-        <article>
+        <article class="opiniao1" >
 
             <H2>
-                <p>
+                <p >
                     O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são para
                     sinalizar que nós somos plurais e especias como as cores. O conjunto disso significa o todo da
                     natureza e o direito de pertenser a ela.
