--- a/visão.html
+++ b/visão.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="menu">
+        <nav>
             <div>
                 <ul>
 
@@ -42,23 +42,21 @@
         <article>
 
 
-            <H2>
+            <H3>
 
                 <p>
                     Abordando um assunto delicado mas muito importante a ser comentado.
                 </p>
 
                 <p>
-                    Somos seres com diferenças mas com o mesmo direito de alconsar suas linhas de vida como quiser, nao
-                    devemos ter pre-conseito e colocar rotulos.
+                    Somos seres com diferenças mas com o mesmo direito de alconsar suas linhas de vida como quiser, nao devemos ter pre-conseito e colocar rotulos.
                 </p>
 
                 <p>
-                    Sem limitaçoes em genero, raça ou parametros de limites Economicos sociais temos que mudar,
-                    pensamentos e a realidade para um desejo de igualdade.
+                    Sem limitaçoes em genero, raça ou parametros de limites Economicos sociais temos que mudar, pensamentos e a realidade para um desejo de igualdade.
                 </p>
 
-            <H2>
+                <H3>
 
         </article>
 
@@ -66,79 +64,62 @@
 
         <P>Chamada também de desigualdade econômica, é um problema social presente em todos os países do mundo</p>
 
-        <p>Ela decorre, principalmente, da má distribuição de renda e da falta de investimento e ate falta de atenção na
-            área social, como educação, saúde e oportunidades.</p>
+        <p>Ela decorre, principalmente, da má distribuição de renda e da falta de investimento e ate falta de atenção na área social, como educação, saúde e oportunidades.</p>
 
-        <p>Desta maneira, a maioria da população fica a mercê de uma minoria que detém os recursos, o que gera as
-            desigualdades.É a diferença econômica e oportunidade que existe entre determinados grupos de pessoas dentro
-            de uma mesma sociedade.</p>
+        <p>Desta maneira, a maioria da população fica a mercê de uma minoria que detém os recursos, o que gera as desigualdades.É a diferença econômica e oportunidade que existe entre determinados grupos de pessoas dentro de uma mesma sociedade.</p>
 
-        <P>Isto se torna um problema para uma região ou país quando as distância entre as rendas são muito grandes dando
-            origem a fortes disparidades.</P>
+        <P>Isto se torna um problema para uma região ou país quando as distância entre as rendas são muito grandes dando origem a fortes disparidades.</P>
 
-        <P>Em tese, sempre haverá desigualdade social, pois é impossível que cada um tenha exatamente as mesmas
-            quantidades de bens materiais.</P>
+        <P>Em tese, sempre haverá desigualdade social, pois é impossível que cada um tenha exatamente as mesmas quantidades de bens materiais.</P>
 
         <P>
-            Se um país não consegue atender as necessidades básicas de grande parte de seus cidadãos, tampouco irá
-            prosperar de forma equitativa.
+            Se um país não consegue atender as necessidades básicas de grande parte de seus cidadãos, tampouco irá prosperar de forma equitativa.
         </P>
 
         <P>
-            Além da desigualdade social, há outras maneiras de avaliar uma sociedade pela maneira que trata seus
-            integrantes do ponto de vista econômico, regional, racial e de gênero.
+            Além da desigualdade social, há outras maneiras de avaliar uma sociedade pela maneira que trata seus integrantes do ponto de vista econômico, regional, racial e de gênero.
         </P>
 
         <P>
-        <UL>
-            <li>Desigualdade econômica: desigualdade entre a distribuição de renda.</li>
+            <UL>
+                <li>Desigualdade econômica: desigualdade entre a distribuição de renda.</li>
 
-            <li> Desigualdade racial: desigualdade de oportunidades para as diferentes raças: negro,
-                branco,amarelo,pardo.
-            </li>
+                <li> Desigualdade racial: desigualdade de oportunidades para as diferentes raças: negro, branco,amarelo,pardo.
+                </li>
 
-            <li>
-                Desigualdade regional: disparidades entre regiões, cidades e estados.
-            </li>
+                <li>
+                    Desigualdade regional: disparidades entre regiões, cidades e estados.
+                </li>
 
-            <li>
-                Desigualdade de gênero: diferenças entre homens e mulheres, homossexuais, trans e demais gêneros.
-            </li>
+                <li>
+                    Desigualdade de gênero: diferenças entre homens e mulheres, homossexuais, trans e demais gêneros.
+                </li>
 
-        </UL>
+            </UL>
         </P>
 
         <H1>VISÃO PRINCIPAL</H1>
         <ARTICLe>
             <H2>
-                Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e fechar
-                os olhos sobre tais situaçoes nao podemos aceitar tais desigualdades.
+                Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e fechar os olhos sobre tais situaçoes nao podemos aceitar tais desigualdades.
             </H2>
 
         </ARTICLe>
 
         <p>
-            O mercado de trabalho brasileiro está marcado por significativas e persistentes desigualdades de gênero e
-            raça e esse é um aspecto que deve ser levado em conta nos processos de formulação, implementação e avaliação
-            das políticas públicas em geral, e, em particular, das políticas de emprego, inclusão social e redução da
-            pobreza.
+            O mercado de trabalho brasileiro está marcado por significativas e persistentes desigualdades de gênero e raça e esse é um aspecto que deve ser levado em conta nos processos de formulação, implementação e avaliação das políticas públicas em geral, e,
+            em particular, das políticas de emprego, inclusão social e redução da pobreza.
         </p>
 
         <P>
-            As diversas formas de discriminação estão fortemente relacionadas aos fenômenos de exclusão social que
-            originam e reproduzem a pobreza. São responsáveis pela superposição de diversos tipos de vulnerabilidades e
-            pela criação de poderosas barreiras adicionais para que pessoas e grupos discriminados possam superar a
-            pobreza e ter acesso a um trabalho decente. No Brasil, as desigualdades de gênero e raça não são fenômenos
-            que estão referidos a "minorias" ou a grupos específicos da sociedade. Pelo contrário, são problemas que
-            dizem respeito às grandes maiorias da população.</P>
+            As diversas formas de discriminação estão fortemente relacionadas aos fenômenos de exclusão social que originam e reproduzem a pobreza. São responsáveis pela superposição de diversos tipos de vulnerabilidades e pela criação de poderosas barreiras adicionais
+            para que pessoas e grupos discriminados possam superar a pobreza e ter acesso a um trabalho decente. No Brasil, as desigualdades de gênero e raça não são fenômenos que estão referidos a "minorias" ou a grupos específicos da sociedade. Pelo
+            contrário, são problemas que dizem respeito às grandes maiorias da população.</P>
 
         <P>
-            As desigualdades de gênero e raça são eixos estruturantes da matriz da desigualdade social no Brasil que,
-            por
-            sua vez, está na raiz da permanência e reprodução das situações de pobreza e exclusão social. Por isso,
-            enfrentar essas desigualdades significa tratar de uma característica estrutural da sociedade brasileira,
-            cuja transformação é imprescindível para a superação dos déficits de trabalho decente atualmente existentes,
-            assim como para o efetivo cumprimento dos Objetivos de Desenvolvimento do Milênio.
+            As desigualdades de gênero e raça são eixos estruturantes da matriz da desigualdade social no Brasil que, por sua vez, está na raiz da permanência e reprodução das situações de pobreza e exclusão social. Por isso, enfrentar essas desigualdades significa
+            tratar de uma característica estrutural da sociedade brasileira, cuja transformação é imprescindível para a superação dos déficits de trabalho decente atualmente existentes, assim como para o efetivo cumprimento dos Objetivos de Desenvolvimento
+            do Milênio.
         </P>
 
         <H1>OLHAR DE ESPERANÇA</H1>
@@ -152,26 +133,19 @@
         </P>
 
         <P>
-            Nações Unidas-
-            Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma
-            taxa maior que a média nacional.
+            Nações Unidas- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma taxa maior que a média nacional.
         </P>
 
         <p>
-            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, independentemente da idade,
-            gênero, deficiência, raça, etnia, origem, religião, condição econômica ou outra.
+            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, independentemente da idade, gênero, deficiência, raça, etnia, origem, religião, condição econômica ou outra.
         </p>
 
         <P>
-            Brasil-
-            Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma
-            taxa maior que a renda média dos 10% mais ricos.
+            Brasil- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma taxa maior que a renda média dos 10% mais ricos.
         </P>
 
         <P>
-            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, de forma a reduzir as
-            desigualdades, independentemente da idade, gênero, deficiência, raça, etnia, nacionalidade, religião,
-            condição econômica ou outra.
+            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, de forma a reduzir as desigualdades, independentemente da idade, gênero, deficiência, raça, etnia, nacionalidade, religião, condição econômica ou outra.
         </P>
         <P>Seguindo essa linha de propostas dos paises sitados pra desejo de leitura completa segui esse link:</P>
 
@@ -188,28 +162,22 @@
         </P>
 
         <p>
-            Reconhecer e valorizar o trabalho de assistência e doméstico não remunerado, por meio da disponibilização de
-            serviços públicos, infraestrutura e políticas de proteção social, bem como a promoção da responsabilidade
-            compartilhada dentro do lar e da família, conforme os contextos nacionais.
+            Reconhecer e valorizar o trabalho de assistência e doméstico não remunerado, por meio da disponibilização de serviços públicos, infraestrutura e políticas de proteção social, bem como a promoção da responsabilidade compartilhada dentro do lar e da família,
+            conforme os contextos nacionais.
         </p>
 
         <P>
-            Eliminar todas as formas de discriminação de gênero, nas suas intersecções com raça, etnia, idade,
-            deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e nacionalidade,
-            em especial para as meninas e mulheres do campo, da floresta, das águas e das periferias urbanas.
+            Eliminar todas as formas de discriminação de gênero, nas suas intersecções com raça, etnia, idade, deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e nacionalidade, em especial para as meninas e mulheres do campo,
+            da floresta, das águas e das periferias urbanas.
         </P>
 
         <P>
-            Garantir a participação plena e efetiva das mulheres e a igualdade de oportunidades para a liderança em
-            todos os níveis de tomada de decisão na esfera pública, em suas dimensões política e econômica, considerando
-            as intersecções com raça, etnia, idade, deficiência, orientação sexual, identidade de gênero,
-            territorialidade, cultura, religião e nacionalidade, em especial para as mulheres do campo, da floresta, das
-            águas e das periferias urbanas
+            Garantir a participação plena e efetiva das mulheres e a igualdade de oportunidades para a liderança em todos os níveis de tomada de decisão na esfera pública, em suas dimensões política e econômica, considerando as intersecções com raça, etnia, idade,
+            deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e nacionalidade, em especial para as mulheres do campo, da floresta, das águas e das periferias urbanas
         </P>
 
         <P>
-            Indicadores-Existência ou não de arcabouço legal em vigor para promover, reforçar e monitorar a igualdade e
-            a não-discriminação com base no sexo.
+            Indicadores-Existência ou não de arcabouço legal em vigor para promover, reforçar e monitorar a igualdade e a não-discriminação com base no sexo.
         </P>
 
         <p>
