--- a/VICK.html
+++ b/VICK.html
@@ -11,22 +11,22 @@
 
 
 
-<body class="vickbody">
+<body>
     <header>
-        <nav class="menu">
-            <div class="div">
+        <nav class="nav">
+            <div class=" div ">
                 <ul>
 
-                    <li><a href="VICK.html"> TECNOTODES </a></li>
+                    <li><a href="VICK.html "> TECNOTODES </a></li>
 
 
-                    <li><a href="sobrenos.html"> Sobre Nós </a></li>
+                    <li><a href="sobrenos.html "> Sobre Nós </a></li>
 
 
-                    <li><a href="visão.html"> Visão </a></li>
+                    <li><a href="visão.html "> Visão </a></li>
 
 
-                    <li><a href="fim.html"> Resultados </a></li>
+                    <li><a href="fim.html "> Resultados </a></li>
 
 
                 </ul>
@@ -36,36 +36,31 @@
         </nav>
 
 
-        <title>TECNOTODES🌈</title>🌈
+        <title>TECNOTODES🌈</title>
     </header>
+    <article class="opiniao1 ">
 
+        <H3>
+
+            <p>
+                O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são para demonstrar que nós somos plurais e especias como as cores. O conjunto delas significa o todo da natureza e o direito de pertenser a ela.
+            </p>
+
+        </H3>
+
+    </article>
     <section>
-
-
-        <article class="opiniao1" >
-
-            <H2>
-                <p >
-                    O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são para
-                    sinalizar que nós somos plurais e especias como as cores. O conjunto disso significa o todo da
-                    natureza e o direito de pertenser a ela.
-                </p>
-            </H2>
-
-        </article>
 
         <H2>Quem é ?</H2>
 
         <p>
-            A TECNOTODES🌈 Surgiu de uma ideia de uma pessoa lgbtqia+, com um pensamento de ver uma empresa com
-            diversidades que soubesse que ali seria acolhida com mentes abertas, poder trabalhar e se desenvolver na
-            area da tecnologia onde pode ser acolhida e crescer como pessoa livre de preconceitos.
+            A TECNOTODES🌈 Surgiu de uma ideia de uma pessoa lgbtqia+, com um pensamento de ver uma empresa com diversidades que soubesse que ali seria acolhida com mentes abertas, poder trabalhar e se desenvolver na area da tecnologia onde pode ser acolhida e crescer
+            como pessoa livre de preconceitos.
         </p>
 
         <P>
-            Ser uma pessoa lgbtqia+ e de querer ser uma pessoa da tecnoçogia, qual representatividade mais adequada para
-            esses dois significados de ter uma empresa como a TECNOTODES, unidos para idealizar uma ideia como seria uma
-            empresa que fosse acolhedora e plural como as cores.
+            Ser uma pessoa lgbtqia+ e de querer ser uma pessoa da tecnoçogia, qual representatividade mais adequada para esses dois significados de ter uma empresa como a TECNOTODES, unindo esses pensamentos para idealizar uma criaçao.como seria uma empresa que fosse
+            acolhedora e plural como as cores?
         </P>
 
         <dl>
@@ -85,54 +80,36 @@
         </dl>
 
         <P>
-            Com essas perguntas surgir a necessidade de elaboarar e a criar esse site para o compreendimento dessa ideia
-            e desejo.mas isso não e so uma ideia da criadora desse site e sim um desejo igual de todos da diversidade
-            como; mulheres cis ;homens cis ;mulheres trans;homens trans ;mulheres negras;homens negros ;heterossexuai ;
-            homoxessuais ; bissexuais ; etc...
+            Com essas perguntas surgir a necessidade de elaboarar e a criar esse site para o compreendimento dessa ideia e desejo.mas isso não e so uma ideia da criadora desse site e sim um desejo igual de todos da diversidade como; mulheres cis ;homens cis ;mulheres
+            trans;homens trans ;mulheres negras;homens negros ;heterossexuai ; homoxessuais ; bissexuais ; etc...
         </P>
 
         <P>
-            Essas clasificaçao sao representadadas por cores do arco-ires que estao todos na natureza pertecentes a um
-            todo.Entao todos pode e deve ter um direito de ser e permaneser.
+            Essas clasificaçao sao representadadas por cores do arco-ires que estao todos na natureza pertecentes a um todo.Entao todos pode e deve ter um direito de ser e permaneser.
         </P>
 
 
         <P>
-            Viu quantas caracteristicas em uma especie humana mas o que tem em comum em todos elas ?
-            Sim um desejo de Oportunidade.
+            Viu quantas caracteristicas em uma especie humana mas o que tem em comum em todos elas ? Sim um desejo de Oportunidade.
         </P>
 
         <p>
-            Uma oportunidade é vista como um acontecimento oportuno capaz de melhorar o estado atual de um indivíduo,
-            uma situação nova que traga benefícios.
+            Uma oportunidade é vista como um acontecimento oportuno capaz de melhorar o estado atual de um indivíduo, uma situação nova que traga benefícios.
         </p>
 
         <p>
-            Uma oportunidade de trabalho é uma possibilidade de trabalhar em troca de uma compensação financeira para
-            realizar seus sonhos e desejos.Uma oportunidade se consiste em uma situação favorável onde pode ser e
-            desenvolver como um todo.
+            Uma oportunidade de trabalho é uma possibilidade de trabalhar em troca de uma compensação financeira para realizar seus sonhos e desejos.Uma oportunidade se consiste em uma situação favorável onde pode ser e desenvolver como um todo.
         </P>
 
         <p>
-            Percebemos que isso é o que todos queremos certo, mas se eu disser que nao e uma realidade para todos, mesmo
-            sendo direito por natureza por pertencermos em meios de igualidade por natureza sendo a mesma especie e
-            direitos de viver como quisermos.
+            Percebemos que isso é o que todos queremos certo, mas se eu disser que nao e uma realidade para todos, mesmo sendo direito por natureza por pertencermos em meios de igualidade por natureza sendo a mesma especie e direitos de viver como quisermos.
         </p>
 
         <p>
-            Mas entao porque surge tantas desigualdades ?
-            isso e um pensamento que temos a anos em historia, discutidos por nos sociedades ate hoje em dia
-            entre:pessoas;grupos;ongs;politicas...
+            Mas entao porque surge tantas desigualdades ? isso e um pensamento que temos a anos em historia, discutidos por nos sociedades ate hoje em dia entre:pessoas;grupos;ongs;politicas...
         </p>
-        
+
         veio o surgimento desse desejo criativo a tecnotodes.
-
-
-
-
-
-
-
 
 
 
