--- a/sobrenos.html
+++ b/sobrenos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
 
     <title>Sobre Nos🌈</title>
 </head>
+
 <body>
 
     <nav class="menu">
@@ -39,6 +41,7 @@
 
 
 
-    <h1>O que é TECNOTODES🌈</h1>🌈
+    <h1>O que é TECNOTODES🌈</h1>
 </body>
+
 </html>
