--- a/visão.html
+++ b/visão.html
@@ -13,9 +13,10 @@
     <title>Visão🌈</title>
 </head>
 
-<body>
-    <header>
-        <nav>
+<body class="visaobody">
+
+    <header class="visaoheader">
+        <nav class="visaonav">
             <div>
                 <ul>
 
@@ -38,154 +39,219 @@
     </header>
 
 
-    <section>
-        <article>
+    <section class="text2">
+        <div class="visaoopiniao2">
+            <article class="visaoopiniao2">
 
-
-            <H3>
-
-                <p>
-                    Abordando um assunto delicado mas muito importante a ser comentado.
-                </p>
-
-                <p>
-                    Somos seres com diferenças mas com o mesmo direito de alconsar suas linhas de vida como quiser, nao devemos ter pre-conseito e colocar rotulos.
-                </p>
-
-                <p>
-                    Sem limitaçoes em genero, raça ou parametros de limites Economicos sociais temos que mudar, pensamentos e a realidade para um desejo de igualdade.
-                </p>
 
                 <H3>
 
-        </article>
+                    <p>
+                        Abordando um assunto delicado mas muito importante a ser comentado.
+                    </p>
 
-        <H1>A DESIGUALDADE SOCIAL</H1>
+                    <p>
+                        Somos seres com diferenças mas com o mesmo direito de alconsar suas linhas de vida como quiser,
+                        nao devemos ter pré-conseito e colocar rotulos.Sem limitaçoes em genero, raça ou parametros de
+                        limites Economicos sociais temos que mudar,
+                        pensamentos e a realidade para um desejo de igualdade.
+                    </p>
 
-        <P>Chamada também de desigualdade econômica, é um problema social presente em todos os países do mundo</p>
+                    <H3>
 
-        <p>Ela decorre, principalmente, da má distribuição de renda e da falta de investimento e ate falta de atenção na área social, como educação, saúde e oportunidades.</p>
+            </article>
+        </div>
 
-        <p>Desta maneira, a maioria da população fica a mercê de uma minoria que detém os recursos, o que gera as desigualdades.É a diferença econômica e oportunidade que existe entre determinados grupos de pessoas dentro de uma mesma sociedade.</p>
+        <div class="visaotext1">
+            <H1>A DESIGUALDADE SOCIAL</H1>
 
-        <P>Isto se torna um problema para uma região ou país quando as distância entre as rendas são muito grandes dando origem a fortes disparidades.</P>
+            <P>Chamada também de desigualdade econômica, é um problema social presente em todos os países do mundo</p>
 
-        <P>Em tese, sempre haverá desigualdade social, pois é impossível que cada um tenha exatamente as mesmas quantidades de bens materiais.</P>
+            <p>Ela decorre, principalmente, da má distribuição de renda e da falta de investimento e ate falta de
+                atenção na
+                área social, como educação, saúde e oportunidades.</p>
 
-        <P>
-            Se um país não consegue atender as necessidades básicas de grande parte de seus cidadãos, tampouco irá prosperar de forma equitativa.
-        </P>
+            <p>Desta maneira, a maioria da população fica a mercê de uma minoria que detém os recursos, o que gera as
+                desigualdades.É a diferença econômica e oportunidade que existe entre determinados grupos de pessoas
+                dentro
+                de uma mesma sociedade.</p>
 
-        <P>
-            Além da desigualdade social, há outras maneiras de avaliar uma sociedade pela maneira que trata seus integrantes do ponto de vista econômico, regional, racial e de gênero.
-        </P>
+            <P>Isto se torna um problema para uma região ou país quando as distância entre as rendas são muito grandes
+                dando
+                origem a fortes disparidades.</P>
 
-        <P>
+            <P>Em tese, sempre haverá desigualdade social, pois é impossível que cada um tenha exatamente as mesmas
+                quantidades de bens materiais.</P>
+
+            <P>
+                Se um país não consegue atender as necessidades básicas de grande parte de seus cidadãos, tampouco irá
+                prosperar de forma equitativa.
+            </P>
+
+            <P>
+                Além da desigualdade social, há outras maneiras de avaliar uma sociedade pela maneira que trata seus
+                integrantes do ponto de vista econômico, regional, racial e de gênero.
+            </P>
+        </div>
+        <div class="visaoopiniao3">
+            <ARTICLe>
+                <H3>
+                    Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e
+                    fechar
+                    os olhos sobre tais situaçoes nao podemos aceitar tais desigualdades.
+                </H3>
+
+            </ARTICLe>
+        </div>
+        <div class="visaotext2">
+            <P>
             <UL>
                 <li>Desigualdade econômica: desigualdade entre a distribuição de renda.</li>
-
-                <li> Desigualdade racial: desigualdade de oportunidades para as diferentes raças: negro, branco,amarelo,pardo.
+                <BR>
+                <li> Desigualdade racial: desigualdade de oportunidades para as diferentes raças: negro,
+                    branco,amarelo,pardo.
                 </li>
-
+                <BR>
                 <li>
                     Desigualdade regional: disparidades entre regiões, cidades e estados.
                 </li>
-
+                <BR>
                 <li>
                     Desigualdade de gênero: diferenças entre homens e mulheres, homossexuais, trans e demais gêneros.
                 </li>
-
+                <BR>
             </UL>
-        </P>
+            </P>
+        </div>
 
-        <H1>VISÃO PRINCIPAL</H1>
-        <ARTICLe>
-            <H2>
-                Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e fechar os olhos sobre tais situaçoes nao podemos aceitar tais desigualdades.
-            </H2>
+        
+        <div class="visaotext3">
+            <H1>VISÃO PRINCIPAL</H1>
+            <p>
+                O mercado de trabalho brasileiro está marcado por significativas e persistentes desigualdades de gênero
+                e
+                raça e esse é um aspecto que deve ser levado em conta nos processos de formulação, implementação e
+                avaliação
+                das políticas públicas em geral, e,
+                em particular, das políticas de emprego, inclusão social e redução da pobreza.
+            </p>
 
-        </ARTICLe>
+            <P>
+                As diversas formas de discriminação estão fortemente relacionadas aos fenômenos de exclusão social que
+                originam e reproduzem a pobreza. São responsáveis pela superposição de diversos tipos de
+                vulnerabilidades e
+                pela criação de poderosas barreiras adicionais
+                para que pessoas e grupos discriminados possam superar a pobreza e ter acesso a um trabalho decente. No
+                Brasil, as desigualdades de gênero e raça não são fenômenos que estão referidos a "minorias" ou a grupos
+                específicos da sociedade. Pelo
+                contrário, são problemas que dizem respeito às grandes maiorias da população.</P>
 
-        <p>
-            O mercado de trabalho brasileiro está marcado por significativas e persistentes desigualdades de gênero e raça e esse é um aspecto que deve ser levado em conta nos processos de formulação, implementação e avaliação das políticas públicas em geral, e,
-            em particular, das políticas de emprego, inclusão social e redução da pobreza.
-        </p>
+            <P>
+                As desigualdades de gênero e raça são eixos estruturantes da matriz da desigualdade social no Brasil
+                que,
+                por sua vez, está na raiz da permanência e reprodução das situações de pobreza e exclusão social. Por
+                isso,
+                enfrentar essas desigualdades significa
+                tratar de uma característica estrutural da sociedade brasileira, cuja transformação é imprescindível
+                para a
+                superação dos déficits de trabalho decente atualmente existentes, assim como para o efetivo cumprimento
+                dos
+                Objetivos de Desenvolvimento
+                do Milênio.
+            </P>
+        </div>
 
-        <P>
-            As diversas formas de discriminação estão fortemente relacionadas aos fenômenos de exclusão social que originam e reproduzem a pobreza. São responsáveis pela superposição de diversos tipos de vulnerabilidades e pela criação de poderosas barreiras adicionais
-            para que pessoas e grupos discriminados possam superar a pobreza e ter acesso a um trabalho decente. No Brasil, as desigualdades de gênero e raça não são fenômenos que estão referidos a "minorias" ou a grupos específicos da sociedade. Pelo
-            contrário, são problemas que dizem respeito às grandes maiorias da população.</P>
+        <div CLASS="visaotext4">
+            <H1>OLHAR DE ESPERANÇA</H1>
 
-        <P>
-            As desigualdades de gênero e raça são eixos estruturantes da matriz da desigualdade social no Brasil que, por sua vez, está na raiz da permanência e reprodução das situações de pobreza e exclusão social. Por isso, enfrentar essas desigualdades significa
-            tratar de uma característica estrutural da sociedade brasileira, cuja transformação é imprescindível para a superação dos déficits de trabalho decente atualmente existentes, assim como para o efetivo cumprimento dos Objetivos de Desenvolvimento
-            do Milênio.
-        </P>
+            <H2>O OBJETIVO ODS ONU ATE 2030</H2>
 
-        <H1>OLHAR DE ESPERANÇA</H1>
+            <H4>10-Redução das Desigualdades</H4>
 
-        <H3>O OBJETIVO ODS ONU</H3>
+            <P>
+                Reduzir a desigualdade dentro dos países e entre eles
+            </P>
 
-        <H4>10-Redução das Desigualdades</H4>
+            <P>
+                Nações Unidas- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da
+                população
+                mais pobre a uma taxa maior que a média nacional.
+            </P>
 
-        <P>
-            Reduzir a desigualdade dentro dos países e entre eles
-        </P>
+            <p>
+                Até 2030, empoderar e promover a inclusão social, econômica e política de todos, independentemente da
+                idade,
+                gênero, deficiência, raça, etnia, origem, religião, condição econômica ou outra.
+            </p>
 
-        <P>
-            Nações Unidas- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma taxa maior que a média nacional.
-        </P>
+            <P>
+                Brasil- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais
+                pobre a uma taxa maior que a renda média dos 10% mais ricos.
+            </P>
 
-        <p>
-            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, independentemente da idade, gênero, deficiência, raça, etnia, origem, religião, condição econômica ou outra.
-        </p>
+            <P>
+                Até 2030, empoderar e promover a inclusão social, econômica e política de todos, de forma a reduzir as
+                desigualdades, independentemente da idade, gênero, deficiência, raça, etnia, nacionalidade, religião,
+                condição econômica ou outra.
+            </P>
+            <P>Seguindo essa linha de propostas dos paises sitados pra desejo de leitura completa segui esse link:</P>
 
-        <P>
-            Brasil- Até 2030, progressivamente alcançar e sustentar o crescimento da renda dos 40% da população mais pobre a uma taxa maior que a renda média dos 10% mais ricos.
-        </P>
+            <a href="https://www.ipea.gov.br/ods/ods10.html" target="_blank">10. Redução das Desigualdades</a>
 
-        <P>
-            Até 2030, empoderar e promover a inclusão social, econômica e política de todos, de forma a reduzir as desigualdades, independentemente da idade, gênero, deficiência, raça, etnia, nacionalidade, religião, condição econômica ou outra.
-        </P>
-        <P>Seguindo essa linha de propostas dos paises sitados pra desejo de leitura completa segui esse link:</P>
+            <h4>5. Igualdade de Gênero</h4>
 
-        <a href="https://www.ipea.gov.br/ods/ods10.html" target="_blank">10. Redução das Desigualdades</a>
+            <p>
+                Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas
+            </p>
 
-        <h4>5. Igualdade de Gênero</h4>
+            <P>
+                Nações Unidas-Acabar com todas as formas de discriminação contra todas as mulheres e meninas em toda
+                partes.
+            </P>
 
-        <p>
-            Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas
-        </p>
+            <p>
+                Reconhecer e valorizar o trabalho de assistência e doméstico não remunerado, por meio da
+                disponibilização de
+                serviços públicos, infraestrutura e políticas de proteção social, bem como a promoção da
+                responsabilidade
+                compartilhada dentro do lar e da família,
+                conforme os contextos nacionais.
+            </p>
 
-        <P>
-            Nações Unidas-Acabar com todas as formas de discriminação contra todas as mulheres e meninas em toda partes.
-        </P>
+            <P>
+                Eliminar todas as formas de discriminação de gênero, nas suas intersecções com raça, etnia, idade,
+                deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e
+                nacionalidade,
+                em especial para as meninas e mulheres do campo,
+                da floresta, das águas e das periferias urbanas.
+            </P>
 
-        <p>
-            Reconhecer e valorizar o trabalho de assistência e doméstico não remunerado, por meio da disponibilização de serviços públicos, infraestrutura e políticas de proteção social, bem como a promoção da responsabilidade compartilhada dentro do lar e da família,
-            conforme os contextos nacionais.
-        </p>
+            <P>
+                Garantir a participação plena e efetiva das mulheres e a igualdade de oportunidades para a liderança em
+                todos os níveis de tomada de decisão na esfera pública, em suas dimensões política e econômica,
+                considerando
+                as intersecções com raça, etnia, idade,
+                deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e
+                nacionalidade,
+                em especial para as mulheres do campo, da floresta, das águas e das periferias urbanas
+            </P>
 
-        <P>
-            Eliminar todas as formas de discriminação de gênero, nas suas intersecções com raça, etnia, idade, deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e nacionalidade, em especial para as meninas e mulheres do campo,
-            da floresta, das águas e das periferias urbanas.
-        </P>
+            <P>
+                Indicadores-Existência ou não de arcabouço legal em vigor para promover, reforçar e monitorar a
+                igualdade e
+                a não-discriminação com base no sexo.
+            </P>
 
-        <P>
-            Garantir a participação plena e efetiva das mulheres e a igualdade de oportunidades para a liderança em todos os níveis de tomada de decisão na esfera pública, em suas dimensões política e econômica, considerando as intersecções com raça, etnia, idade,
-            deficiência, orientação sexual, identidade de gênero, territorialidade, cultura, religião e nacionalidade, em especial para as mulheres do campo, da floresta, das águas e das periferias urbanas
-        </P>
+            <p>
+                Para cintinua do assunto link:
+            </p><a href="https://www.ipea.gov.br/ods/ods5.html" target="_blank">5. Igualdade de Gênero</a>
+        </div>
 
-        <P>
-            Indicadores-Existência ou não de arcabouço legal em vigor para promover, reforçar e monitorar a igualdade e a não-discriminação com base no sexo.
-        </P>
+        <h3>
 
-        <p>
-            Para cintinua do assunto link:
-        </p><a href="https://www.ipea.gov.br/ods/ods5.html" target="_blank">5. Igualdade de Gênero</a>
-
-
-        <h2>Continue em Resoluçao...</h2>🌈
+            <a class="conh3" href="fim.html">Continue em Resoluçao... <img src="boton-iris.jpg" width="70px">
+            </a>
+        </h3>
 
 
 
