--- a/VICK.html
+++ b/VICK.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="brilho.css">
-    <title>TECNOTODES🌈</title>
+    <title>RAINBOWTEC🌈</title>
 </head>
 
 
 
-<body>
-    <header>
-        <nav class="nav">
-            <div class=" div ">
+<body class="vickbody">
+    <header class="vickhearder">
+        <nav class="vicknav">
+            <div class=" vickdiv1">
                 <ul>
 
-                    <li><a href="VICK.html "> TECNOTODES </a></li>
+                    <li><a href="VICK.html "> RAINBOWTEC🌈</a></li>
 
 
                     <li><a href="sobrenos.html "> Sobre Nós </a></li>
@@ -36,80 +36,127 @@
         </nav>
 
 
-        <title>TECNOTODES🌈</title>
+        <title>RAINBOW🌈</title>
     </header>
-    <article class="opiniao1 ">
 
-        <H3>
+
+    <section class="text1">
+
+        <DIV class="vickdivtext1">
+            <H1>RAINBOWTEC🌈</H1>
 
             <p>
-                O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são para demonstrar que nós somos plurais e especias como as cores. O conjunto delas significa o todo da natureza e o direito de pertenser a ela.
+                A RAINBOWTEC🌈 Surgiu de uma ideia de uma pessoa lgbtqia+, com um pensamento de ver uma empresa com
+                diversidades que soubesse que ali seria acolhida com mentes abertas, poder trabalhar e se
+                desenvolver na Área da Tecnologia, onde pode ser acolhida e crescer
+                como pessoa livre de preconceitos.
             </p>
 
-        </H3>
+            <P>
+                Ser uma pessoa Lgbtqia+ e de querer ser uma pessoa da tecnoçogia, qual representatividade mais
+                adequada para esses dois significados em ter uma Empresa como a RAINBOWTEC🌈, unindo esses pensamentos
+                para idealizar uma criação.Como seria uma empresa que fosse
+                acolhedora e plural como as cores?
+            </P>
+        </DIV>
 
-    </article>
-    <section>
+        <div class="vickopiniao1">
+            <article class="vickopiniao1">
 
-        <H2>Quem é ?</H2>
+                <H3>
 
-        <p>
-            A TECNOTODES🌈 Surgiu de uma ideia de uma pessoa lgbtqia+, com um pensamento de ver uma empresa com diversidades que soubesse que ali seria acolhida com mentes abertas, poder trabalhar e se desenvolver na area da tecnologia onde pode ser acolhida e crescer
-            como pessoa livre de preconceitos.
-        </p>
+                    <p>
+                        O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são
+                        para demonstrar que nós somos plurais e especias como as cores. O conjunto delas significa o
+                        todo da Natureza, e o direito de pertenser a ela (Natureza).
+                    </p>
 
-        <P>
-            Ser uma pessoa lgbtqia+ e de querer ser uma pessoa da tecnoçogia, qual representatividade mais adequada para esses dois significados de ter uma empresa como a TECNOTODES, unindo esses pensamentos para idealizar uma criaçao.como seria uma empresa que fosse
-            acolhedora e plural como as cores?
-        </P>
+                </H3>
+        </div>
 
-        <dl>
+        </article>
+        <br>
+        <div class="vickdivtext2">
+            <dl>
 
-            <dt>SÃO AS QUESTÕES</dt>
-            <br>
-            <dd>Como seria uma Empresa de Divercidades ?</dd>
-            <br>
-            <dd>O porque ter uma Empresa de Diversidades ?</dd>
-            <br>
-            <dd>Quais seriam os objetivos ?</dd>
-            <br>
-            <dd>O que seria de qualidade e Diferencial em ser uma Empresa com Divercidade ?</dd>
+                <h1>SÃO AS QUESTÕES</h1>
+                <dl>
 
-
-
-        </dl>
-
-        <P>
-            Com essas perguntas surgir a necessidade de elaboarar e a criar esse site para o compreendimento dessa ideia e desejo.mas isso não e so uma ideia da criadora desse site e sim um desejo igual de todos da diversidade como; mulheres cis ;homens cis ;mulheres
-            trans;homens trans ;mulheres negras;homens negros ;heterossexuai ; homoxessuais ; bissexuais ; etc...
-        </P>
-
-        <P>
-            Essas clasificaçao sao representadadas por cores do arco-ires que estao todos na natureza pertecentes a um todo.Entao todos pode e deve ter um direito de ser e permaneser.
-        </P>
+                    <dd>Como seria uma Empresa de Divercidades ?</dd>
+                    <br>
+                    <dd>O por que ter uma Empresa de Diversidades ?</dd>
+                    <br>
+                    <dd>Quais seriam os Objetivos ?</dd>
+                    <br>
+                    <dd>O que seria de Qualidade e Diferencial em ser uma Empresa com Divercidade ?</dd>
+                </dl>
 
 
-        <P>
-            Viu quantas caracteristicas em uma especie humana mas o que tem em comum em todos elas ? Sim um desejo de Oportunidade.
-        </P>
+            </dl>
+        </div>
 
-        <p>
-            Uma oportunidade é vista como um acontecimento oportuno capaz de melhorar o estado atual de um indivíduo, uma situação nova que traga benefícios.
-        </p>
 
-        <p>
-            Uma oportunidade de trabalho é uma possibilidade de trabalhar em troca de uma compensação financeira para realizar seus sonhos e desejos.Uma oportunidade se consiste em uma situação favorável onde pode ser e desenvolver como um todo.
-        </P>
+        <div class="vickdivtext3">
+            <P>
+                Com essas perguntas surgir a necessidade de elaborar e criar esse site para o compreendimento dessas
+                ideias
+                e desejo.mas isso não e so uma ideia da criadora desse site e sim um desejo igual de todos da
+                diversidade
+                como; mulheres cis ;homens cis ;mulheres
+                trans;homens trans ;mulheres negras;homens negros ;heterossexuai ; homoxessuais ; bissexuais ; etc...
+            </P>
 
-        <p>
-            Percebemos que isso é o que todos queremos certo, mas se eu disser que nao e uma realidade para todos, mesmo sendo direito por natureza por pertencermos em meios de igualidade por natureza sendo a mesma especie e direitos de viver como quisermos.
-        </p>
+            <P>
+                Essas clasificaçao sao representadadas por cores do arco-ires que estao todos na natureza pertecentes a
+                um todo.Entao todos pode e deve ter um direito de ser e permaneser.
+            </P>
 
-        <p>
-            Mas entao porque surge tantas desigualdades ? isso e um pensamento que temos a anos em historia, discutidos por nos sociedades ate hoje em dia entre:pessoas;grupos;ongs;politicas...
-        </p>
 
-        veio o surgimento desse desejo criativo a tecnotodes.
+            <P>
+                Viu quantas caracteristicas em uma especie humana mas o que tem em comum em todos elas ?
+                Um desejo de Oportunidade.
+            </P>
+
+            <p>
+                Uma oportunidade é vista como um acontecimento oportuno capaz de melhorar o estado atual de um
+                indivíduo,
+                uma situação nova que traga benefícios.
+            </p>
+
+            <p>
+                Uma oportunidade de trabalho é uma possibilidade de trabalhar em troca de uma compensação financeira
+                para
+                realizar seus sonhos e desejos.Uma oportunidade se consiste em uma situação favorável onde pode ser e
+                desenvolver como um todo.
+            </P>
+
+            <p>
+                Percebemos que isso é o que todos queremos certo, mas se eu disser que nao e uma realidade para todos,
+                mesmo
+                sendo direito por natureza por pertencermos em meios de igualidade por natureza sendo a mesma especie e
+                direitos de viver como quisermos.
+            </p>
+
+            <p>
+                Mas entao porque surge tantas desigualdades ? isso e um pensamento que temos a anos em historia,
+                discutidos
+                por nos sociedades ate hoje em dia entre:pessoas;grupos;ongs;politicas...
+            </p>
+
+        </div>
+
+        <br>
+
+        <blockquote>
+            <h2> <q>E assim o surgimento desse desejo criando a RAINBOWTEC🌈</q></h2>
+        </blockquote>
+
+        <h3>
+
+            <a class="conh3" href="sobrenos.html">Continua em Sobre Nós... <img src="boton-iris.jpg" width="70px">
+
+            </a>
+        </h3>
 
 
 
