--- a/visão.html
+++ b/visão.html
@@ -124,7 +124,7 @@
             </P>
         </div>
 
-        
+
         <div class="visaotext3">
             <H1>VISÃO PRINCIPAL</H1>
             <p>
@@ -243,9 +243,16 @@
             </P>
 
             <p>
-                Para cintinua do assunto link:
+                Para continua o assunto link:
             </p><a href="https://www.ipea.gov.br/ods/ods5.html" target="_blank">5. Igualdade de Gênero</a>
         </div>
+
+
+
+
+    </section>
+
+    <footer>
 
         <h3>
 
@@ -253,16 +260,7 @@
             </a>
         </h3>
 
-
-
-
-    </section>
-
-
-
-
-
-
+    </footer>
 
 </body>
 
