--- a/VICK.html
+++ b/VICK.html
@@ -36,7 +36,7 @@
         </nav>
 
 
-        <title>RAINBOW🌈</title>
+        <title>RAINBOWTEC🌈</title>
     </header>
 
 
@@ -151,16 +151,6 @@
             <h2> <q>E assim o surgimento desse desejo criando a RAINBOWTEC🌈</q></h2>
         </blockquote>
 
-        <h3>
-
-            <a class="conh3" href="sobrenos.html">Continua em Sobre Nós... <img src="boton-iris.jpg" width="70px">
-
-            </a>
-        </h3>
-
-
-
-
 
 
 
@@ -169,10 +159,15 @@
 
 
 
+    <footer>
+        <h3>
 
+            <a class="conh3" href="sobrenos.html">Continua em Sobre Nós... <img src="boton-iris.jpg" width="70px">
 
+            </a>
+        </h3>
 
-
+    </footer>
 
 
 
