--- a/sobrenos.html
+++ b/sobrenos.html
@@ -36,12 +36,85 @@
     </nav>
 
 
+    <H1> O que é RAINBOWTEC🌈</H1>
+
+    <section>
+        <p>
+            A RAINBOWTEC🌈 uma empresa voltada a inclusão social e empregabilidade da diversidade, buscando
+            profissionais
+            que possom se desenvolver e trabalhar sobre projetos da tecnologia na sociedades, ja que a diversidade faz
+            parte da sociedade nada melhor que ter esse reflexo na empresa.Nos prezamos pela individualidade de cada
+            individo e as qualidades que possam oferecer como criatividade propria e seus exemplos de visões das
+            situações.
+        </p>
+
+        <p>
+            Prezamos pela essencia e personalidade unica de cada individo e traz para seu nucleo essas qualidades que
+            tras inumeros beneficios a compos de ideias, projetos, visoes e imagem da empresa em inclusão.Porque todos
+            tem qualidades para entregar como diversos pensamentos unicos que podem trazer ideias e melhoria diversas
+            pela gama de pensamento que cada um possa ter.
+        </p>
+
+        <p>
+            A melhor reflexo dessa represetatividade e a diversidade, ja que faz parte da sociedade.E o melhor reflexo
+            para entender as necessidades da sociedades, como é ter essa representatividade dentro da empresa ?
+            Empresas adeptas da diversidade ganham visibilidade perante a concorrência. Negócios que demonstram domínio
+            e respeito por essas questões, se preocupando com o bem-estar dos indivíduos
+            Tem aumentado muito a credibilidade diante a sociedade.
+        </p>
+
+        <p>
+            Ter essa essencia e entender que somos diversos como as cores e que o conjunto disso influencia no sistema
+            natural e complementar do todo a sociedade(Natureza).
+        </p>
+
+        <p>
+            As discussões a respeito do multiculturalismo estão cada vez mais presentes em nossa sociedade e chegaram ao
+            mercado de trabalho. As novas gerações se posicionam cada vez mais a favor do respeito ao próximo, fazendo
+            com que a diversidade nas empresas seja uma discussão inevitável.
+        </p>
+
+        <p>
+            Em paralelo a isso, aquelas que se antecipam e buscam aprimorar suas posturas em relação a essas questões tendem a aproveitar inúmeros benefícios. Não se trata de atender a uma moda passageira, mas sim de respeitar o progresso social pelo qual o mundo está passando.Aderir a essa cultura é urgente e necessário não só para obter visibilidade, mas também por questões sociais.
+        </p>
+
+
+
+    </section>
 
 
 
 
 
-    <h1>O que é TECNOTODES🌈</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
