--- a/visão.html
+++ b/visão.html
@@ -35,11 +35,12 @@
 
         </nav>
 
-        <title>Aos olhos de TECNOTODES🌈</title>
+
     </header>
 
 
     <section class="text2">
+        <H1>Aos olhos de TECNOTODES🌈</H1>
         <div class="visaoopiniao2">
             <article class="visaoopiniao2">
 
